--- a/notebooks/search_installed_pacages.ipynb
+++ b/notebooks/search_installed_pacages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "1286bfed-1da0-41b6-b07c-570dff9baca4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ea61fa8b-6ebd-4143-9ff9-e7d27d94524d",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "dc170037-61cf-45c5-8e68-0a8862709b6f",
    "metadata": {},
    "outputs": [
@@ -59,43 +59,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
+       "      <th>187</th>\n",
+       "      <td>pacmng2</td>\n",
+       "      <td>192.168.0.136</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
        "      <td>libcurl3-gnutls</td>\n",
        "      <td>7.81.0-1ubuntu1.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
+       "      <th>239</th>\n",
+       "      <td>pacmng2</td>\n",
+       "      <td>192.168.0.136</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
        "      <td>libgnutls30</td>\n",
        "      <td>3.7.3-4ubuntu1.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>814</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>864</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1486</th>\n",
+       "      <th>842</th>\n",
        "      <td>influxdb2</td>\n",
        "      <td>192.168.0.137</td>\n",
        "      <td>Ubuntu</td>\n",
@@ -104,7 +86,7 @@
        "      <td>7.81.0-1ubuntu1.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1530</th>\n",
+       "      <th>886</th>\n",
        "      <td>influxdb2</td>\n",
        "      <td>192.168.0.137</td>\n",
        "      <td>Ubuntu</td>\n",
@@ -113,25 +95,7 @@
        "      <td>3.7.3-4ubuntu1.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2124</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2176</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3256</th>\n",
+       "      <th>1930</th>\n",
        "      <td>home_gw</td>\n",
        "      <td>192.168.0.100</td>\n",
        "      <td>Ubuntu</td>\n",
@@ -140,7 +104,7 @@
        "      <td>7.81.0-1ubuntu1.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3432</th>\n",
+       "      <th>2106</th>\n",
        "      <td>home_gw</td>\n",
        "      <td>192.168.0.100</td>\n",
        "      <td>Ubuntu</td>\n",
@@ -149,13 +113,67 @@
        "      <td>3.7.3-4ubuntu1.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3939</th>\n",
+       "      <th>2613</th>\n",
        "      <td>home_gw</td>\n",
        "      <td>192.168.0.100</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
        "      <td>libsrt1.4-gnutls</td>\n",
        "      <td>1.4.4-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3483</th>\n",
+       "      <td>grafana1</td>\n",
+       "      <td>192.168.0.134</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>libcurl3-gnutls</td>\n",
+       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3528</th>\n",
+       "      <td>grafana1</td>\n",
+       "      <td>192.168.0.134</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>libgnutls30</td>\n",
+       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4130</th>\n",
+       "      <td>stdb1</td>\n",
+       "      <td>192.168.0.101</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>libcurl3-gnutls</td>\n",
+       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4180</th>\n",
+       "      <td>stdb1</td>\n",
+       "      <td>192.168.0.101</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>libgnutls30</td>\n",
+       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4824</th>\n",
+       "      <td>django05</td>\n",
+       "      <td>192.168.0.145</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>libcurl3-gnutls</td>\n",
+       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4876</th>\n",
+       "      <td>django05</td>\n",
+       "      <td>192.168.0.145</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>libgnutls30</td>\n",
+       "      <td>3.7.3-4ubuntu1.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
