add make_upgrade_package_inventory_and_playbook method

--- a/notebooks/search_installed_pacages.ipynb
+++ b/notebooks/search_installed_pacages.ipynb
@@ -12,7 +12,8 @@
     "#\n",
     "# package_name_stringで指定した文字列を含むinstalle済パッケージが検索され、出力される。\n",
     "# package_name_string = \"grub-efi-amd64\"\n",
-    "package_name_string = \"GnuTLS\""
+    "# package_name_string = \"GnuTLS\"\n",
+    "package_name_string = \"ssh\""
    ]
   },
   {
@@ -59,121 +60,247 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>pacmng2</td>\n",
-       "      <td>192.168.0.136</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>pacmng2</td>\n",
-       "      <td>192.168.0.136</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>842</th>\n",
+       "      <th>332</th>\n",
        "      <td>influxdb2</td>\n",
        "      <td>192.168.0.137</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "      <td>libssh-4</td>\n",
+       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>886</th>\n",
+       "      <th>431</th>\n",
        "      <td>influxdb2</td>\n",
        "      <td>192.168.0.137</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "      <td>openssh-client</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1930</th>\n",
+       "      <th>432</th>\n",
+       "      <td>influxdb2</td>\n",
+       "      <td>192.168.0.137</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433</th>\n",
+       "      <td>influxdb2</td>\n",
+       "      <td>192.168.0.137</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-sftp-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>555</th>\n",
+       "      <td>influxdb2</td>\n",
+       "      <td>192.168.0.137</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>ssh-import-id</td>\n",
+       "      <td>5.11-0ubuntu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938</th>\n",
        "      <td>home_gw</td>\n",
        "      <td>192.168.0.100</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "      <td>libssh-4</td>\n",
+       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2106</th>\n",
+       "      <th>1939</th>\n",
        "      <td>home_gw</td>\n",
        "      <td>192.168.0.100</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "      <td>libssh-gcrypt-4</td>\n",
+       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2613</th>\n",
+       "      <th>2240</th>\n",
        "      <td>home_gw</td>\n",
        "      <td>192.168.0.100</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libsrt1.4-gnutls</td>\n",
-       "      <td>1.4.4-4</td>\n",
+       "      <td>openssh-client</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3483</th>\n",
+       "      <th>2241</th>\n",
+       "      <td>home_gw</td>\n",
+       "      <td>192.168.0.100</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2242</th>\n",
+       "      <td>home_gw</td>\n",
+       "      <td>192.168.0.100</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-sftp-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2470</th>\n",
+       "      <td>home_gw</td>\n",
+       "      <td>192.168.0.100</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>ssh</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2471</th>\n",
+       "      <td>home_gw</td>\n",
+       "      <td>192.168.0.100</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>ssh-import-id</td>\n",
+       "      <td>5.11-0ubuntu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2974</th>\n",
        "      <td>grafana1</td>\n",
        "      <td>192.168.0.134</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "      <td>libssh-4</td>\n",
+       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3528</th>\n",
+       "      <th>3074</th>\n",
        "      <td>grafana1</td>\n",
        "      <td>192.168.0.134</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "      <td>openssh-client</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4130</th>\n",
+       "      <th>3075</th>\n",
+       "      <td>grafana1</td>\n",
+       "      <td>192.168.0.134</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3076</th>\n",
+       "      <td>grafana1</td>\n",
+       "      <td>192.168.0.134</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-sftp-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3198</th>\n",
+       "      <td>grafana1</td>\n",
+       "      <td>192.168.0.134</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>ssh-import-id</td>\n",
+       "      <td>5.11-0ubuntu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3643</th>\n",
        "      <td>stdb1</td>\n",
        "      <td>192.168.0.101</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "      <td>libssh-4</td>\n",
+       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4180</th>\n",
+       "      <th>3757</th>\n",
        "      <td>stdb1</td>\n",
        "      <td>192.168.0.101</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "      <td>openssh-client</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4824</th>\n",
+       "      <th>3758</th>\n",
+       "      <td>stdb1</td>\n",
+       "      <td>192.168.0.101</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3759</th>\n",
+       "      <td>stdb1</td>\n",
+       "      <td>192.168.0.101</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-sftp-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3898</th>\n",
+       "      <td>stdb1</td>\n",
+       "      <td>192.168.0.101</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>ssh-import-id</td>\n",
+       "      <td>5.11-0ubuntu1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4337</th>\n",
        "      <td>django05</td>\n",
        "      <td>192.168.0.145</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libcurl3-gnutls</td>\n",
-       "      <td>7.81.0-1ubuntu1.15</td>\n",
+       "      <td>libssh-4</td>\n",
+       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4876</th>\n",
+       "      <th>4447</th>\n",
        "      <td>django05</td>\n",
        "      <td>192.168.0.145</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libgnutls30</td>\n",
-       "      <td>3.7.3-4ubuntu1.4</td>\n",
+       "      <td>openssh-client</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4448</th>\n",
+       "      <td>django05</td>\n",
+       "      <td>192.168.0.145</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4449</th>\n",
+       "      <td>django05</td>\n",
+       "      <td>192.168.0.145</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>openssh-sftp-server</td>\n",
+       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4579</th>\n",
+       "      <td>django05</td>\n",
+       "      <td>192.168.0.145</td>\n",
+       "      <td>Ubuntu</td>\n",
+       "      <td>22.04</td>\n",
+       "      <td>ssh-import-id</td>\n",
+       "      <td>5.11-0ubuntu1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
