add package update function

--- a/notebooks/dev/dev_PackageList.ipynb
+++ b/notebooks/dev/dev_PackageList.ipynb
@@ -2,7 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "3c303e3e-a13d-4cf5-8552-294eda42333a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "CURRENT_DIR = Path(os.getcwd())\n",
+    "PJROOT_DIR = CURRENT_DIR.parent.parent\n",
+    "LIB_LOCAL_DIR = PJROOT_DIR / \"notebooks\"\n",
+    "LIB_PACKAGE_MAN_DIR = PJROOT_DIR / \"airflow\"\n",
+    "\n",
+    "sys.path.append(str(LIB_PACKAGE_MAN_DIR))\n",
+    "sys.path.append(str(LIB_LOCAL_DIR))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "dc07ae62-8b75-42d2-aada-d7c270eebf2f",
    "metadata": {},
    "outputs": [],
@@ -15,304 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "80e69f64-8f40-4959-ac27-0f3d699c551a",
+   "execution_count": 6,
+   "id": "d3076c69-8701-4f40-8429-b0f27fc6191b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "検索結果(pandas.DataFrame)：\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hostname</th>\n",
-       "      <th>ssh_ip_address</th>\n",
-       "      <th>os</th>\n",
-       "      <th>os_version</th>\n",
-       "      <th>name</th>\n",
-       "      <th>version</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>335</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>436</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>437</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>559</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1004</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1118</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1119</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1120</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1259</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1653</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1752</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1753</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1754</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1876</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2314</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2424</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2425</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2426</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2556</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3941</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3942</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-gcrypt-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4243</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4244</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4245</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4473</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4474</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "Index(['ssh_ip_address', 'os', 'os_version', 'hostname', 'pkg_id', 'arch',\n",
+       "       'category', 'name', 'origin', 'source', 'version', 'epoc',\n",
+       "       'transformed_versiondata', 'parsed_versiondata'],\n",
+       "      dtype='object')"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "package_name_string = \"ssh\"\n",
-    "\n",
-    "検索結果_df = self.search_installed_packages(package_name_string)"
+    "# hostリストの一覧を表示する\n",
+    "# def get_host_list(self):\n",
+    "df = self.df\n",
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3076c69-8701-4f40-8429-b0f27fc6191b",
+   "id": "f58abf9c-fa22-46fc-8893-9c2dc5ea9134",
    "metadata": {},
    "outputs": [],
    "source": []
