--- a/notebooks/search_installed_pacages.ipynb
+++ b/notebooks/search_installed_pacages.ipynb
@@ -13,17 +13,34 @@
     "# package_name_stringで指定した文字列を含むinstalle済パッケージが検索され、出力される。\n",
     "# package_name_string = \"grub-efi-amd64\"\n",
     "# package_name_string = \"GnuTLS\"\n",
-    "package_name_string = \"ssh\""
+    "package_name_string = \"python3-venv\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "fe42ee0d-16e2-49d4-9103-73ae93241305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "CURRENT_DIR = Path(os.getcwd())\n",
+    "PJROOT_DIR = CURRENT_DIR.parent\n",
+    "LIB_PACKAGE_MAN_DIR = PJROOT_DIR / \"airflow\"\n",
+    "\n",
+    "sys.path.append(str(LIB_PACKAGE_MAN_DIR))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ea61fa8b-6ebd-4143-9ff9-e7d27d94524d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib_local import PackageList\n",
+    "from lib_package_man import PackageList\n",
     "from packaging import version\n",
     "import pandas as pd\n",
     "\n",
@@ -32,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dc170037-61cf-45c5-8e68-0a8862709b6f",
    "metadata": {},
    "outputs": [
@@ -60,247 +77,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>332</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>431</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>433</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>555</th>\n",
-       "      <td>influxdb2</td>\n",
-       "      <td>192.168.0.137</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1938</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1939</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-gcrypt-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2240</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2241</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2242</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2470</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2471</th>\n",
-       "      <td>home_gw</td>\n",
-       "      <td>192.168.0.100</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2974</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3074</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3075</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3076</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3198</th>\n",
-       "      <td>grafana1</td>\n",
-       "      <td>192.168.0.134</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3643</th>\n",
+       "      <th>3868</th>\n",
        "      <td>stdb1</td>\n",
        "      <td>192.168.0.101</td>\n",
        "      <td>Ubuntu</td>\n",
        "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3757</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3758</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3759</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3898</th>\n",
-       "      <td>stdb1</td>\n",
-       "      <td>192.168.0.101</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4337</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>libssh-4</td>\n",
-       "      <td>0.9.6-2ubuntu0.22.04.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4447</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-client</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4448</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4449</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>openssh-sftp-server</td>\n",
-       "      <td>1:8.9p1-3ubuntu0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4579</th>\n",
-       "      <td>django05</td>\n",
-       "      <td>192.168.0.145</td>\n",
-       "      <td>Ubuntu</td>\n",
-       "      <td>22.04</td>\n",
-       "      <td>ssh-import-id</td>\n",
-       "      <td>5.11-0ubuntu1</td>\n",
+       "      <td>python3-venv</td>\n",
+       "      <td>3.10.6-1~22.04</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
